[package]
name = "better-desktops"
authors = ["clover <clover@3leaves.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
global-hotkey = "0.8.0"
image = "0.25.10"
tray-icon = "0.24.1"
winit = "0.30.13"
winvd = "0.0.49"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_WindowsAndMessaging",
]
